--- a/css/main.scss
+++ b/css/main.scss
@@ -2,6 +2,7 @@
 @import 'sidebar';
 @import 'sidebar';
 @import 'header';
+@import 'main-content';
 
 .conteudo-principal{
     border: 1px solid #823782;
