--- a/css/_header.scss
+++ b/css/_header.scss
@@ -2,7 +2,10 @@
 .header{
     background: $degrade-goiaba;
 
-    a img{
-        width: 100px;
+    .logo {
+        width: 70px;
+    }
+    img{
+        width: 40px;
     }
 }
