--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -1,6 +1,8 @@
 
 .sidebar-left{
-    max-width: 275px;
+    width: 275px;
     height: 500px;
+    box-shadow: 0px 3px 10px rgba(88, 88, 88, 0.1), 0px 16px 31px rgba(88, 88, 88, 0.1);
+    margin-left: 45px;
     border: 1px solid tomato;
 }
