--- a/css/main.css
+++ b/css/main.css
@@ -1,12 +1,18 @@
 .sidebar-left {
-  max-width: 275px;
+  width: 275px;
   height: 500px;
+  -webkit-box-shadow: 0px 3px 10px rgba(88, 88, 88, 0.1), 0px 16px 31px rgba(88, 88, 88, 0.1);
+          box-shadow: 0px 3px 10px rgba(88, 88, 88, 0.1), 0px 16px 31px rgba(88, 88, 88, 0.1);
+  margin-left: 45px;
   border: 1px solid tomato;
 }
 
 .sidebar-left {
-  max-width: 275px;
+  width: 275px;
   height: 500px;
+  -webkit-box-shadow: 0px 3px 10px rgba(88, 88, 88, 0.1), 0px 16px 31px rgba(88, 88, 88, 0.1);
+          box-shadow: 0px 3px 10px rgba(88, 88, 88, 0.1), 0px 16px 31px rgba(88, 88, 88, 0.1);
+  margin-left: 45px;
   border: 1px solid tomato;
 }
 
@@ -14,8 +20,20 @@
   background: linear-gradient(269.41deg, #DB5D79 0.41%, #E2645A 99.41%);
 }
 
+.header .logo {
+  width: 70px;
+}
+
 .header img {
   width: 40px;
+}
+
+.conteudo-principal {
+  margin-top: 24px;
+}
+
+.conteudo-principal .width-cards {
+  width: 800px;
 }
 
 .conteudo-principal {
