--- a/css/_main-content.scss
+++ b/css/_main-content.scss
@@ -4,7 +4,7 @@
 
     .width-cards{
         width: 800px;
-        height: 600px;
+        height: auto;
         background: #FFFFFF;
         box-shadow: 0px 16px 31px rgba(88, 88, 88, 0.1);
         border-radius: 30px;
@@ -12,20 +12,63 @@
     }
 
     img{
-        width: 60px;
+        width: 50px;
     }
-
     p{
-        line-height:28px;
-        font-size:18px
-    }
-
-    .header-cards{
         line-height: 28px;
-        align-items: center;
+            font-size:18px;
+    };
 
-       .card-content{
-           width: 460px;
-       }
+    
+    .first-content{
+        p{
+            margin-left:86px;
+            width: 460px;
+        }
+        .header-cards{
+            
+            align-items: center;
+    
+           .card-content{
+               width: 460px;
+               
+               h2{
+                font-size:24px;
+                font-weight:bold;
+                margin-left:22px
+               }
+           }
+        }
+      
     }
+
+    .botoes-card{
+        
+        
+        .button-color{
+            background: #FFFFFF;
+            border-radius: 30px;
+            box-shadow: 0px 16px 31px rgba(88, 88, 88, 0.1);
+        }
+        p{
+            margin: 0px;
+            padding: 8px;
+        }
+        .footer-content{
+            color: white;
+            background-color: $azul;
+            border-radius: 30px;
+            padding: 17px 56px;
+            border: none;
+            width: 200px;
+        }
+        .circle-button{
+            width: 60px;
+            padding:15px;
+        }
+        
+    }
+
+    
 }
+ 
