atualizacoes de sabado

--- a/css/_main-content.scss
+++ b/css/_main-content.scss
@@ -1,28 +1,32 @@
 .conteudo-principal{
     margin-top: 24px;
     font-family: 'Lato', sans-serif;
+    min-height:800px;
+    overflow-x: hidden;
 
     .width-cards{
-        width: 800px;
+        width: 900px;
+        margin: auto;
         height: auto;
         background: #FFFFFF;
         box-shadow: 0px 16px 31px rgba(88, 88, 88, 0.1);
         border-radius: 30px;
         padding: 50px;
+        margin-bottom:20px;
     }
 
     img{
-        width: 50px;
+        width: 40px;
     }
-    p{
+    p,a {
         line-height: 28px;
-            font-size:18px;
+        font-size:18px;
     };
 
     
     .first-content{
         p{
-            margin-left:86px;
+            margin-left:66px;
             width: 460px;
         }
         .header-cards{
@@ -33,7 +37,7 @@
                width: 460px;
                
                h2{
-                font-size:24px;
+                font-size:20px;
                 font-weight:bold;
                 margin-left:22px
                }
@@ -65,6 +69,32 @@
         .circle-button{
             width: 60px;
             padding:15px;
+        }
+        
+    }
+
+    .botoes-casamento{
+        button{
+            padding:8px 10px;
+            border: none;
+            border-radius: 30px;
+            color: white;
+            background-color:$azul;
+            margin-right: 10px;
+        }
+    }
+
+    iframe{
+        border-radius: 30px;;
+        margin: 0 auto;
+        padding:0;
+        margin-top:20px;
+    }
+
+    .campo-pesquisa{
+
+        input{
+            border-radius: 30px;
         }
         
     }
