--- a/css/main.scss
+++ b/css/main.scss
@@ -3,14 +3,6 @@
 @import 'sidebar';
 @import 'header';
 @import 'main-content';
+@import 'footer';
+@import 'perfil';
 
-.conteudo-principal{
-    border: 1px solid #823782;
-}
-.my-cards{
-    border: 1px solid yellow;
-}
-.ex-cartao{
-    width: 300px;
-    height: 600px;
-}
