--- a/css/_header.scss
+++ b/css/_header.scss
@@ -9,6 +9,9 @@
         width: 40px;
     }
     button{
+        color:#ffffff;
         border: 1px solid white;
+        background-color:$azul;
+        border-radius:48px;
     }
 }
