--- a/css/_sidebar.scss
+++ b/css/_sidebar.scss
@@ -4,7 +4,8 @@
     height: auto;
     box-shadow: 0px 3px 10px rgba(88, 88, 88, 0.1), 0px 16px 31px rgba(88, 88, 88, 0.1);
     margin-left: 24px;
-  
+    margin-right: 32px;
+    max-height: 680px;
 
     .inicio img{
         width: 150px;
